# 260227_vhs-watchlist

./: .gitignore  README.md  ai.ipynb  candlestick_chart.py  demo_argv.py  demo_candlestick_chart.py  eval.ipynb  isins.py  main.py  portfolio.json  pyproject.toml  test.py  watchlist.cmd  watchlist.py
