[project]
name = "260227-vhs-watchlist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.13",
    "langchain-google-genai>=4.2.1",
    "plotext>=5.3.2",
    "rich>=14.3.3",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
